--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -682,6 +682,10 @@ body.no-js {
     pointer-events: none;
 }
 
+.text--light {
+    color: $gray-600;
+}
+
 .bgc-white {
     background-color: $white;
 }
