Added message "Alle berichten getoond"

--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_tabs.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_tabs.html
@@ -1,24 +1,25 @@
 <turbo-stream action="update" target="snack_overzicht_tabs">
 <template>
     <ul class="list-horizontal">
+        {{ aantal }}
         {% comment %} {% if ongelezen_aantal > 0 %} {% endcomment %}
         <li class="{% if filter == 'alle' %}active{% endif %}">
             <a role="button"
                data-notificaties--manager-overzicht-filter-param="alle"
                data-action="notificaties--manager#overzichtTab"
-               href="{% url 'snack_overzicht' %}?filter=alle">Alle</a>
+               href="{% url 'snack_overzicht' %}?filter=alle&aantal={{ aantal }}">Alle</a>
         </li>
         <li class="{% if filter == 'ongelezen' %}active{% endif %}">
             <a role="button"
                data-notificaties--manager-overzicht-filter-param="ongelezen"
                data-action="notificaties--manager#overzichtTab"
-               href="{% url 'snack_overzicht' %}?filter=ongelezen">Ongelezen</a>
+               href="{% url 'snack_overzicht' %}?filter=ongelezen&aantal={{ aantal }}">Ongelezen</a>
         </li>
         <li class="{% if filter == 'gelezen' %}active{% endif %}">
             <a role="button"
                data-notificaties--manager-overzicht-filter-param="gelezen"
                data-action="notificaties--manager#overzichtTab"
-               href="{% url 'snack_overzicht' %}?filter=gelezen">Gelezen</a>
+               href="{% url 'snack_overzicht' %}?filter=gelezen&aantal={{ aantal }}">Gelezen</a>
         </li>
         {% if filter != 'gelezen' and ongelezen_aantal > 0 %}
             <li>
