--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_laad_meer.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_laad_meer.html
@@ -1,15 +1,12 @@
 <turbo-stream action="update" target="snack_overzicht_laad_meer">
 <template>
-    {% comment %} {% if paginering.is_er_meer %} {% endcomment %}
-    <a data-action="notificaties--manager#laadMeerSnacks"
-       data-notificaties--manager-target="snackOverzichtLaadMeer"
-       href="#"
-       role="button"
-       class="{% if not paginering.is_er_meer %}disabled{% endif %}">Laad meer</a>
-    {% comment %} {% else %}
-    <span class="text--light {% if not aantal %}disabled{% endif %}">
-        Alle berichten getoond
-    </span>
-    {% endif %}{% endcomment %}
+    {% if paginering.is_er_meer %}
+        <a data-action="notificaties--manager#laadMeerSnacks"
+           data-notificaties--manager-target="snackOverzichtLaadMeer"
+           href="#"
+           role="button">Laad meer</a>
+    {% else %}
+        <span class="text--light {% if aantal == 0 %}disabled{% endif %}">Alle berichten getoond</span>
+    {% endif %}
 </template>
 </turbo-stream>
