Styling the form, in progress

--- a/app/apps/main/templates/melding/aanmaken.html
+++ b/app/apps/main/templates/melding/aanmaken.html
@@ -2,7 +2,7 @@
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
 {% block title %}
-    Nieuw melding | PlanR
+    Nieuwe melding | PlanR
 {% endblock title %}
 {% block header %}
     {% with pageTitle="Nieuwe melding" %}
