--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -779,6 +779,10 @@ body.no-js {
     border-bottom: 1px solid $gray-600;
 }
 
+.border-top {
+    border-top: 1px solid $blue-200;
+}
+
 .counter {
     display: block;
     margin-top: -1.5em;
