--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -22,6 +22,12 @@
                 </ul>
             </div>
             <div class="form-row btn-row">
+                <button type="reset"
+                        class="btn btn-tertiary"
+                        data-action="modal#closeModal"
+                        data-modal-target="modal">
+                    <span>Annuleren</span>
+                </button>
                 <button type="submit" class="btn btn-action">
                     <span>Aanmaken</span>
                 </button>
